# kn_base

./: .gitignore  README.md
Bash/: Bash_notes.md
C&C++/: C_notes.md
C&C++/C_parts/: C++.md  Code_notes.md  Code_style_notes.md  Tools_notes.md
C&C++/Parts/: C++.md  C.md  Code_notes.md  Code_style_notes.md  QT_notes.md  Tools_notes.md
C&C++/materials/: example_1.cpp  tetris_tests.c
C&C++/materials/CPP/: dynamic_array.cpp  example_1.cpp  example_2.cpp  lambda_fun_ex.cpp  model3d_tests.cpp  multiple_inheritance.cpp
C&C++/materials/CPP/cmake_example/: CMakeLists.txt
C&C++/materials/CPP/cmake_example/tests/: CMakeLists.txt
C&C++/materials/CPP/logger/: logger.cpp  logger.hpp
C&C++/materials/CPP/time_example/: timer.hpp  timer_.cpp
C&C++/parts/: C++.md  Code_notes.md  Code_style_notes.md  QT_notes.md  Tools_notes.md
DevOps/: CICD_notes.md  Code_editors.md  Doc_notes.md  Docker_notes.md  Git_notes.md  MD_notes.md  VM_notes.md  git_notes.md
DevOps/VM_parts/: installation.md  setting_up_VMs.md
DevOps/VM_parts/intercourse/: README.txt  active_script.sh
DevOps/materials/: Doxyfile
DevOps/materials/CICD_files/: .gitlab-ci.yml
DevOps/materials/intercourse/: README.txt  active_script.sh
Extras/: Learning.md
Extras/TgBot/: TgBot_notes.md
Extras/TgBot/materians/: bot_controls_gitlab.sh
General/: Dictionaty.md
General/Algorithms/: Algorithms.md
General/Algorithms/parts/: Hash_tables.md  Life_hacks.md  Postfix_notation.md  Prefix_sum.md  Two_pointers.md
General/Data_structures/: Stanard_data_structures.md
General/elements/: Design_patterns.md
Instruments/: TgBot_notes.md  TlgBot_notes.md  programs.md
Linux/: Linux_notes.md
Linux/Linux_parts/: SSH_stuff.md
Linux/materials/: fedora_start_up.md  libraries paths.txt  ubuntu_start_up.md
Linux/materials/Scripts/: update.sh
ML_AI/: ML&AI.md
Python/: Python_notes.md
Python/materials/: CI_CD_exaample.yaml  pyproject.toml
Python/parts/: General_info.md  Python.md  Settings.md
SQL/: SQL_notes.md  postgreSQL_notes.md
SQL/table_examples/: car.sql  connected_1.sql  connected_uuid.sql  person.sql
